--- a/index.html
+++ b/index.html
@@ -9,11 +9,17 @@
     <!-- Title  -->
     <title>Bootstrap Freelancer</title>
     <!-- link Bootstrap  -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
     <!-- Link css  -->
     <link rel="stylesheet" href="index-style.css">
 </head>
 <body>
-    
+    <!-- Header  -->
+     <header class="container border border-primary">
+        <div class="row">
+            <div class="col"></div>
+            <div class="col"></div>
+        </div>
+     </header>
 </body>
 </html>
