--- a/index.html
+++ b/index.html
@@ -15,10 +15,12 @@
 </head>
 <body>
     <!-- Header  -->
-     <header class="container border border-primary">
-        <div class="row">
-            <div class="col"></div>
-            <div class="col"></div>
+     <header class="bg-dark d-flex align-items-center justify-content-center">
+        <div class="row container justify-content-between my-border">
+            <div class="col col-4 my-col my-border">
+            </div>
+            <div class="col col-2 col-md-4 my-col my-border">
+            </div>
         </div>
      </header>
 </body>
