added profile section

--- a/index.html
+++ b/index.html
@@ -15,13 +15,30 @@
 </head>
 <body>
     <!-- Header  -->
-     <header class="bg-dark d-flex align-items-center justify-content-center">
+    <header class="bg-dark d-flex align-items-center justify-content-center">
         <div class="row container justify-content-between my-border">
             <div class="col col-4 my-col my-border">
             </div>
             <div class="col col-2 col-md-4 my-col my-border">
             </div>
         </div>
-     </header>
+    </header>
+    <!-- Profile section  -->
+    <section class="bg-success d-flex justify-content-center">
+        <div class="row container my-border justify-content-center">
+            <div class="col d-flex justify-content-center py-4">
+                <div class="my-card my-border"></div>
+            </div>
+        </div>
+
+    </section>
+    <!-- Portfolio section  -->
+    <section></section>
+    <!-- About section  -->
+    <section></section>
+    <!-- Contact section  -->
+    <section></section>
+    <!-- Footer  -->
+     <footer></footer>
 </body>
 </html>
