--- a/index.html
+++ b/index.html
@@ -30,10 +30,34 @@
                 <div class="my-card my-border"></div>
             </div>
         </div>
-
     </section>
     <!-- Portfolio section  -->
-    <section></section>
+    <section class="container">
+        <div class="title">
+            <h1 class="my-border"></h1>
+            <h1 class="my-border"></h1>
+        </div>
+        <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 gy-4 justify-content-center">
+            <div class="col">
+                <div class="my-img my-border"></div>
+            </div>
+            <div class="col">
+                <div class="my-img my-border"></div>
+            </div>
+            <div class="col">
+                <div class="my-img my-border"></div>
+            </div>
+            <div class="col">
+                <div class="my-img my-border"></div>
+            </div>
+            <div class="col">
+                <div class="my-img my-border"></div>
+            </div>
+            <div class="col">
+                <div class="my-img my-border"></div>
+            </div>
+        </div>
+    </section>
     <!-- About section  -->
     <section></section>
     <!-- Contact section  -->
