--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
         </div>
     </section>
     <!-- Portfolio section  -->
-    <section class="container">
+    <section class="py-4">
         <div class="title">
             <h1 class="my-border"></h1>
             <h1 class="my-border"></h1>
         </div>
-        <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 gy-4 justify-content-center">
+        <div class="row container mx-auto row-cols-1 row-cols-md-2 row-cols-lg-3 gy-4 justify-content-center">
             <div class="col">
                 <div class="my-img my-border"></div>
             </div>
@@ -59,7 +59,25 @@
         </div>
     </section>
     <!-- About section  -->
-    <section></section>
+    <section class="bg-success py-4">
+        <div class="row container mx-auto">
+            <div class="col">
+                <div class="my-card my-border w-100">
+                    <div class="title">
+                        <h1 class="my-border"></h1>
+                        <h1 class="my-border"></h1>
+                    </div>
+                    <div class="row row-cols-1 row-cols-md-2 w-100 mx-auto my-3">
+                        <div class="col my-parag my-border"></div>
+                        <div class="col my-parag my-border"></div>
+                    </div>
+                    <div class="button">
+                        <h1 class="my-border"></h1>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <!-- Contact section  -->
     <section></section>
     <!-- Footer  -->
