--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                         <h1 class="my-border"></h1>
                         <h1 class="my-border"></h1>
                     </div>
-                    <div class="row row-cols-1 row-cols-md-2 w-100 mx-auto my-3">
+                    <div class="row container row-cols-1 row-cols-md-2 w-100 mx-auto my-3">
                         <div class="col my-parag my-border"></div>
                         <div class="col my-parag my-border"></div>
                     </div>
@@ -79,7 +79,13 @@
         </div>
     </section>
     <!-- Contact section  -->
-    <section></section>
+    <section class="d-flex justify-content-center">
+        <div class="row container my-border justify-content-center">
+            <div class="col d-flex justify-content-center py-4">
+                <div class="my-card my-border"></div>
+            </div>
+        </div>
+    </section>
     <!-- Footer  -->
      <footer></footer>
 </body>
