--- a/index.html
+++ b/index.html
@@ -87,6 +87,22 @@
         </div>
     </section>
     <!-- Footer  -->
-     <footer></footer>
+     <footer class="bg-dark pt-4">
+        <div class="up-footer container">
+            <div class="row row-cols-1 row-cols-md-3">
+                <div class="col">
+                    <div class="my-parag my-border"></div>
+                </div>
+                <div class="col">
+                    <div class="my-parag my-border"></div>
+                </div>
+                <div class="col">
+                    <div class="my-parag my-border"></div>
+                </div>
+            </div>
+        </div>
+        <div class="copy-right container bg-black my-border">
+        </div>
+     </footer>
 </body>
 </html>
