modification portofolio section

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </section>
     <!-- Portfolio section  -->
     <section class="py-4">
-        <div class="title">
+        <div class="title container">
             <h1 class="my-border"></h1>
             <h1 class="my-border"></h1>
         </div>
