modifcation on header

--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
         <div class="row container justify-content-between my-border">
             <div class="col col-4 my-col my-border">
             </div>
-            <div class="col col-2 col-md-4 my-col my-border">
+            <div class="col col-2 d-md-none my-col my-border">
+            </div>
+            <div class="col d-none d-md-block col-md-4 my-col my-border">
             </div>
         </div>
     </header>
