--- a/index.html
+++ b/index.html
@@ -15,15 +15,28 @@
 </head>
 <body>
     <!-- Header  -->
-    <header class="bg-dark d-flex align-items-center justify-content-center">
-        <div class="row container justify-content-between my-border">
-            <div class="col col-4 my-col my-border">
+    <header>
+        <nav class="navbar navbar-expand-sm text-capitalize" data-bs-theme="dark">
+            <div class="container">
+              <a class="navbar-brand fs-2 fw-bold text-light" href="#">start bootstrap</a>
+              <button class="navbar-toggler " type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+                <ul class="navbar-nav">
+                  <li class="nav-item">
+                    <a class="nav-link active text-light" aria-current="page" href="#">portfoilio</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link text-light" href="#">about</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link text-light" href="#">contact</a>
+                  </li>
+                </ul>
+              </div>
             </div>
-            <div class="col col-2 d-md-none my-col my-border">
-            </div>
-            <div class="col d-none d-md-block col-md-4 my-col my-border">
-            </div>
-        </div>
+        </nav>
     </header>
     <!-- Profile section  -->
     <section class="bg-success d-flex justify-content-center">
