--- a/index.html
+++ b/index.html
@@ -8,8 +8,12 @@
     <meta name="description" content="Create template resposnsive of Bootstrap Freelancer">
     <!-- Title  -->
     <title>Bootstrap Freelancer</title>
-    <!-- link Bootstrap  -->
+
+    <!-- link Bootstrap Css -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+    <!-- Link Bootstrap icons  -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css">
+
     <!-- Link css  -->
     <link rel="stylesheet" href="index-style.css">
 </head>
@@ -39,10 +43,17 @@
         </nav>
     </header>
     <!-- Profile section  -->
-    <section class="bg-success d-flex justify-content-center">
-        <div class="row container my-border justify-content-center">
-            <div class="col d-flex justify-content-center py-4">
-                <div class="my-card my-border"></div>
+    <section class="profile">
+        <div class="container mb-3 py-3 text-center text-uppercase">
+            <img src="./img/avatar.svg" class="col-5" alt="avatar">
+            <div class="card-body text-white p-3">
+              <h1 class="card-title fs-1 fw-bold">Start Bootstrap</h1>
+              <div class="d-flex justify-content-center align-items-center gap-3 py-3">
+                  <div class="line col-1"></div>
+                  <i class="bi bi-star-fill fs-1"></i>
+                  <div class="line col-1"></div>
+              </div>
+              <p class="card-text fs-5">Ghraphic artist-Web designer-Illustrator</p>
             </div>
         </div>
     </section>
