completed portofolio section

--- a/index.html
+++ b/index.html
@@ -59,28 +59,32 @@
     </section>
     <!-- Portfolio section  -->
     <section class="py-4">
-        <div class="title container">
-            <h1 class="my-border"></h1>
-            <h1 class="my-border"></h1>
+        <div class="card-body text-uppercase text-center p-3">
+            <h1 class="card-title fw-bold">Portfolio</h1>
+            <div class="d-flex justify-content-center align-items-center gap-3 py-3">
+                <div class="line col-1 border-secondary"></div>
+                <i class="bi bi-star-fill fs-1"></i>
+                <div class="line col-1 border-secondary"></div>
+            </div>
         </div>
         <div class="row container mx-auto row-cols-1 row-cols-md-2 row-cols-lg-3 gy-4 justify-content-center">
             <div class="col">
-                <div class="my-img my-border"></div>
+                <img src="./img/cabin.png" alt="cabin">
             </div>
             <div class="col">
-                <div class="my-img my-border"></div>
+                <img src="./img/cake.png" alt="cake">
             </div>
             <div class="col">
-                <div class="my-img my-border"></div>
+                <img src="./img/circus.png" alt="circus">
             </div>
             <div class="col">
-                <div class="my-img my-border"></div>
+                <img src="./img/game.png" alt="game">
             </div>
             <div class="col">
-                <div class="my-img my-border"></div>
+                <img src="./img/safe.png" alt="safe">
             </div>
             <div class="col">
-                <div class="my-img my-border"></div>
+                <img src="./img/submarine.png" alt="submarine">
             </div>
         </div>
     </section>
