--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </nav>
     </header>
     <!-- Profile section  -->
-    <section class="profile">
+    <section class="my-bg-color">
         <div class="container mb-3 py-3 text-center text-uppercase">
             <img src="./img/avatar.svg" class="col-5" alt="avatar">
             <div class="card-body text-white p-3">
@@ -89,24 +89,33 @@
         </div>
     </section>
     <!-- About section  -->
-    <section class="bg-success py-4">
-        <div class="row container mx-auto">
-            <div class="col">
-                <div class="my-card my-border w-100">
-                    <div class="title">
-                        <h1 class="my-border"></h1>
-                        <h1 class="my-border"></h1>
-                    </div>
-                    <div class="row container row-cols-1 row-cols-md-2 w-100 mx-auto my-3">
-                        <div class="col my-parag my-border"></div>
-                        <div class="col my-parag my-border"></div>
-                    </div>
-                    <div class="button">
-                        <h1 class="my-border"></h1>
-                    </div>
+    <section class="my-bg-color py-4">
+        <div class="container text-white">
+            <div class="card-body text-uppercase text-center p-3">
+                <h1 class="card-title fw-bold">About</h1>
+                <div class="d-flex justify-content-center align-items-center gap-3 py-3">
+                    <div class="line col-2"></div>
+                    <i class="bi bi-star-fill fs-1"></i>
+                    <div class="line col-2"></div>
                 </div>
             </div>
-        </div>
+            <div class="row col-10 mx-auto row-cols-1 row-cols-md-2 gy-3">
+                <div class="col">
+                    <p class="card-text">Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including
+                      HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy customization.</p>
+                </div>
+                <div class="col">
+                    <p class="card-text">Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point!</p>
+                </div>
+            </div>
+            <div class="row mt-3">
+                <div class="col text-center">
+                    <a href="#" class="btn btn-outline-light">
+                        <i class="bi bi-download me-2"></i>Download
+                    </a>
+                </div>
+            </div>
+          </div>
     </section>
     <!-- Contact section  -->
     <section class="d-flex justify-content-center">
