--- a/index.html
+++ b/index.html
@@ -9,10 +9,13 @@
     <!-- Title  -->
     <title>Bootstrap Freelancer</title>
 
-    <!-- link Bootstrap Css -->
+    <!-- Link Bootstrap Css -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
     <!-- Link Bootstrap icons  -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css">
+
+    <!-- Link font Awesome  -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer">
 
     <!-- Link css  -->
     <link rel="stylesheet" href="index-style.css">
@@ -132,25 +135,42 @@
               <input type="email" class="border-0 border-bottom rounded-0 ps-0 py-3" id="email" placeholder="Email Address">  
               <input type="tel" class="border-0 border-bottom rounded-0 ps-0 py-3" id="phone" placeholder="Phone Number"> 
               <textarea name="message" id="message" placeholder="Message" class="border-0 border-bottom rounded-0 ps-0 w-100" rows="5"></textarea>
-              <button type="submit" class="btn my-bg-color text-white col-3">Submit</button>
+              <button type="submit" class="btn my-bg-color text-white col-3">Send</button>
         </form>
     </section>
     <!-- Footer  -->
-     <footer class="bg-dark pt-4">
-        <div class="up-footer container">
-            <div class="row row-cols-1 row-cols-md-3">
+     <footer class="text-center text-white pt-4">
+        <div class="container">
+            <div class="row row-cols-1 row-cols-md-3 gy-3">
                 <div class="col">
-                    <div class="my-parag my-border"></div>
+                    <h5 class="text-uppercase">Location</h5>
+                    <address>2215 John Daniel Drive Clark, MO 54243</address>
                 </div>
                 <div class="col">
-                    <div class="my-parag my-border"></div>
+                    <h5 class="text-uppercase">Around the web</h5>
+                    <ul class="d-flex justify-content-center list-unstyled gap-2">
+                        <li class="my-border text-center align-content-center">
+                            <a href="#" class="text-white"><i class="fa-brands fa-facebook-f"></i></a>
+                        </li>
+                        <li class="my-border text-center align-content-center">
+                            <a href="#" class="text-decoration-none text-white"><i class="bi bi-google"></i>+</a>
+                        </li>
+                        <li class="my-border text-center align-content-center">
+                            <a href="#" class="text-white"><i class="bi bi-twitter"></i></a>
+                        </li>
+                        <li class="my-border text-center align-content-center">
+                            <a href="#" class="text-white"><i class="fa-brands fa-linkedin-in"></i></i></a>
+                        </li>
+                    </ul>
                 </div>
                 <div class="col">
-                    <div class="my-parag my-border"></div>
+                    <h5 class="text-uppercase">About Freelancer</h5>
+                    <p>Freelancer is a free to use, open source theme created by <a href="#" class="text-decoration-none my-text-primary">Start Bootstrap</a>.</p>
                 </div>
             </div>
         </div>
-        <div class="copy-right container bg-black my-border">
+        <div class="copy-right bg-dark py-4">
+            <span class="text-capitalize">copyright &copy; your website 2019</span>
         </div>
      </footer>
 </body>
