--- a/index.html
+++ b/index.html
@@ -159,7 +159,8 @@
                             <a href="#" class="text-white"><i class="bi bi-twitter"></i></a>
                         </li>
                         <li class="my-border text-center align-content-center">
-                            <a href="#" class="text-white"><i class="fa-brands fa-linkedin-in"></i></i></a>
+                            <a href="#" class="text-white"><i class="fa-brands fa-linkedin-in"></i>
+                            </a>
                         </li>
                     </ul>
                 </div>
